--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 ./node_modules
 /node_modules
 /node_modules/*
+
+./package-lock.json
+/package-lock.json
+
+./env
+/env
+
+./public/static/images
+/public/static/images/*
